为IsharmlaEntity添加ServerGeoAnimator